# RubicsCube

./: CMakeLists.txt  README.md  main3d.cpp  rubicscube.cpp  shader.cpp  shader_frag.glsl  shader_vert.glsl
build_emscripten/: build.sh  run.sh
